LOCAL/directus/overlays/dev/directus/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: directus-ingress
  annotations:
    kubernetes.io/ingress.class: public
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
    - host: directus.dev.test.local.slatsh.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: directus
                port:
                  name: directus
  tls:
    - hosts:
        - directus.dev.test.local.slatsh.com
      secretName: directus-dev-test-local-secret
